src/app/component/document/document.component.scss
@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700&display=swap');

:host {
	font-family: 'Urbanist', Arial, sans-serif;
}

:host {
	display: flex;
	height: 100vh;
	color: light-dark(var(--light-text-1), var(--dark-text-1));
	font-family: Arial, sans-serif;
}

.app-container {
	display: flex;
	justify-content: space-between;
	width: 100%;
	padding: 2rem;
	gap: 5rem;
}

.main-content {
	flex: 1;
	padding: 20px;
	max-width: 800px;

	.breadcrumb {
		color: light-dark(var(--light-text-0), var(--dark-text-0));
		margin-bottom: 20px;
		font-size: 0.75rem;
	}

	.task-title {
		font-size: 24px;
		margin-bottom: 0.75rem;
		margin-top: 1.5rem;
		color: light-dark(var(--light-text-1), var(--dark-text-1));
	}

	.task-content {

		.video-player {
			max-width: 300px;
		}

		.task-description {
			font-family: Urbanist, sans-serif;
			font-size: 1rem;
			line-height: 150%;
			letter-spacing: 0.03em;

			color: light-dark(var(--light-text-1), var(--dark-text-1));
			background-color: transparent;

			width: 100%;
			margin: 1.25rem 0;

			field-sizing: content;
			resize: none;

			border: none;
			outline: none;

			transition: all 300ms ease-in-out;
		}

		.action-buttons {
			margin-top: 1rem;
			display: flex;
			gap: 0.5rem;

			button {
				background-color: light-dark(var(--light-bg-1), var(--dark-bg-1));
				border: 1px solid light-dark(var(--light-bg-1), var(--dark-bg-1));
				border-radius: 50%;
				width: 40px;
				height: 40px;
				padding: 0;
				display: block;
				color: light-dark(var(--light-text-1), var(--dark-text-1));

				.icon {
					display: flex;
					align-items: center;
					justify-content: center;
					font-size: 20px;
				}
			}
		}
	}

	.divider {
		border: none;
		border-top: 1px solid light-dark(var(--light-bg-1), var(--dark-bg-1));
		margin-top: 2rem;
	}

	.task-meta {
		display: flex;
		align-items: center;
		gap: 12px;
		margin-top: 1.5rem;

		.avatar {
			width: 24px;
			height: 24px;
			background-color: #ff5722;
			color: #fff;
			border-radius: 50%;
			display: flex;
			align-items: center;
			justify-content: center;
			font-size: 0.75rem;
		}

		.creator-info {
			color: light-dark(var(--light-text-0), var(--dark-text-0));
		}
	}



}

.task-status {

	padding: 2rem 1.5rem;
	background-color: light-dark(var(--light-bg-0), var(--dark-bg-0));
	border-radius: 2rem;

	width: 40%;
	min-width: 360px;
	max-width: 400px;

	display: flex;
	flex-direction: column;
	align-items: flex-start;

	.title {
		opacity: 0.5;
	}

	.item-list {
		margin-top: 1rem;
		display: flex;
		flex-direction: column;
		width: 100%;
		gap: 0.25rem;

		.status-item {
			width: 100%;
			border-radius: 0.75rem;

			display: flex;
			justify-content: flex-start;
			align-items: center;
			gap: 0.75rem;
			padding: 0.75rem;

			color: light-dark(var(--light-text-1), var(--dark-text-1));

			cursor: pointer;

			&:hover {
				background-color: light-dark(var(--light-bg-1), var(--dark-bg-1));
			}
		}
	}
}

